--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,18 +1,17 @@
-# $NetBSD: Makefile,v 1.621 2024/12/27 08:20:49 wiz Exp $
+# $NetBSD: Makefile,v 1.622 2025/01/14 13:36:14 ryoon Exp $
 
 FIREFOX_VER=		${MOZ_BRANCH}${MOZ_BRANCH_MINOR}
-MOZ_BRANCH=		133.0
-MOZ_BRANCH_MINOR=	.3
+MOZ_BRANCH=		134.0
+MOZ_BRANCH_MINOR=	
 
 DISTNAME=	firefox-${FIREFOX_VER}.source
 PKGNAME=	${DISTNAME:S/.source//:S/b/beta/:S/esr//}
-PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES+=	${MASTER_SITE_MOZILLA:=firefox/releases/${FIREFOX_VER}/source/}
 MASTER_SITES+=	${MASTER_SITE_MOZILLA_ALL:=firefox/releases/${FIREFOX_VER}/source/}
 EXTRACT_SUFX=	.tar.xz
 
-NODEJSKIT=		nodejs-output-132.0.tgz
+NODEJSKIT=		nodejs-output-134.0.tgz
 DISTFILES=		${DEFAULT_DISTFILES} ${NODEJSKIT}
 SITES.${NODEJSKIT}=	${MASTER_SITE_LOCAL}
 
