--- a/net/openvpn/Makefile
+++ b/net/openvpn/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.108 2024/11/14 22:21:14 wiz Exp $
+# $NetBSD: Makefile,v 1.109 2025/01/16 06:30:38 adam Exp $
 
 DISTNAME=	${OPENVPN_DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	net
 MASTER_SITES=	${OPENVPN_MASTER_SITES}
 
