--- a/devel/abseil/Makefile
+++ b/devel/abseil/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2024/12/25 20:22:48 schmonz Exp $
+# $NetBSD: Makefile,v 1.29 2025/01/24 06:28:46 adam Exp $
 
-DISTNAME=	abseil-20240722.0
-PKGREVISION=	1
+DISTNAME=	abseil-20240722.1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=abseil/}
 GITHUB_PROJECT=	abseil-cpp
