--- a/security/libjwt/Makefile
+++ b/security/libjwt/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2024/09/13 19:35:15 adam Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/29 18:17:24 adam Exp $
 
-DISTNAME=	libjwt-1.17.2
+DISTNAME=	libjwt-2.1.1
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GITHUB:=benmcollins/}
 GITHUB_RELEASE=	v${PKGVERSION_NOREV}
@@ -18,6 +18,7 @@ USE_LIBTOOL=		yes
 USE_TOOLS+=		gmake pkg-config
 GNU_CONFIGURE=		yes
 CONFIGURE_ARGS+=	--disable-doxygen-doc
+CONFIGURE_ARGS+=	--without-gnutls
 
 # cmake does not produce .pc file.
 #CMAKE_CONFIGURE_ARGS+=	-DBUILD_SHARED_LIBS=ON
