--- a/biology/subread/Makefile
+++ b/biology/subread/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1 2025/01/20 17:29:58 bacon Exp $
+# $NetBSD: Makefile,v 1.2 2025/01/31 15:41:17 wiz Exp $
 
 DISTNAME=	${PKGNAME}-source
 PKGNAME=	subread-2.0.8
@@ -16,7 +16,7 @@ LICENSE=	gnu-gpl-v3
 # of time to port libsysinfo to NetBSD since it's useful for other apps.
 # The libsysinfo package is only for SunOS at the time of this writing.
 # FreeBSD has a libsysinfo port that may serve as a model for NetBSD.
-NOT_FOR_PLATFORMS+=	NetBSD-*-*
+NOT_FOR_PLATFORM+=	NetBSD-*-*
 
 USE_TOOLS+=	gmake
 
