--- a/biology/openbabel/Makefile
+++ b/biology/openbabel/Makefile
@@ -1,34 +1,26 @@
-# $NetBSD: Makefile,v 1.76 2024/12/29 15:09:40 adam Exp $
+# $NetBSD: Makefile,v 1.77 2025/01/31 15:52:53 wiz Exp $
 
-DISTNAME=	openbabel-${RELVERSION:S/-/./g}
+DISTNAME=	openbabel-3.1.1
 PKGREVISION=	34
 CATEGORIES=	biology
 MASTER_SITES=	${MASTER_SITE_GITHUB:=openbabel/}
-GITHUB_TAG=	openbabel-${RELVERSION}
+GITHUB_TAG=	openbabel-${PKGVERSION_NOREV:S/./-/g}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://openbabel.org/
 COMMENT=	Chemistry file translation program
 LICENSE=	gnu-gpl-v2
 
-RELVERSION=	3-1-1
-
 USE_LANGUAGES=	c gnu++11
 USE_TOOLS+=	pkg-config
-USE_CMAKE=	yes
 
 PKGCONFIG_OVERRIDE+=	openbabel-3.pc.cmake
 
 .include "options.mk"
 
-CONFIGURE_DIRS=		${WRKDIR}/build
-CMAKE_ARG_PATH=		${WRKSRC}
-
 CMAKE_CONFIGURE_ARGS+=	-DLLVM_CONFIG=${LLVM_CONFIG_PATH:Q}
 
-post-extract:
-	${MKDIR} ${WRKDIR}/build
-
+.include "../../devel/cmake/build.mk"
 .include "../../biology/coordgenlibs/buildlink3.mk"
 .include "../../biology/maeparser/buildlink3.mk"
 .include "../../devel/boost-headers/buildlink3.mk"
