--- a/www/firefox/Makefile
+++ b/www/firefox/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.624 2025/01/23 14:28:52 ryoon Exp $
+# $NetBSD: Makefile,v 1.625 2025/02/06 03:11:29 ryoon Exp $
 
 FIREFOX_VER=		${MOZ_BRANCH}${MOZ_BRANCH_MINOR}
-MOZ_BRANCH=		134.0
-MOZ_BRANCH_MINOR=	.2
+MOZ_BRANCH=		135.0
+MOZ_BRANCH_MINOR=	
 
 DISTNAME=	firefox-${FIREFOX_VER}.source
 PKGNAME=	${DISTNAME:S/.source//:S/b/beta/:S/esr//}
@@ -11,7 +11,7 @@ MASTER_SITES+=	${MASTER_SITE_MOZILLA:=firefox/releases/${FIREFOX_VER}/source/}
 MASTER_SITES+=	${MASTER_SITE_MOZILLA_ALL:=firefox/releases/${FIREFOX_VER}/source/}
 EXTRACT_SUFX=	.tar.xz
 
-NODEJSKIT=		nodejs-output-134.0.tgz
+NODEJSKIT=		nodejs-output-135.0.tgz
 DISTFILES=		${DEFAULT_DISTFILES} ${NODEJSKIT}
 SITES.${NODEJSKIT}=	${MASTER_SITE_LOCAL}
 
