--- a/security/libtasn1/Makefile
+++ b/security/libtasn1/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.83 2022/09/09 15:23:52 wiz Exp $
+# $NetBSD: Makefile,v 1.84 2025/02/06 18:37:59 wiz Exp $
 
-DISTNAME=	libtasn1-4.19.0
+DISTNAME=	libtasn1-4.20.0
 CATEGORIES=	security devel
 MASTER_SITES=	${MASTER_SITE_GNU:=libtasn1/}
 
@@ -11,7 +11,8 @@ LICENSE=	gnu-fdl-v1.3 AND gnu-lgpl-v2.1 AND gnu-gpl-v3
 
 USE_LIBTOOL=		yes
 USE_TOOLS+=		bison makeinfo
-USE_LANGUAGES=		c99
+USE_LANGUAGES=		c
+USE_CC_FEATURES+=	c99
 GNU_CONFIGURE=		yes
 
 TEST_TARGET=		check
